--- a/src/components/secondary/ListCard/_listCard.scss
+++ b/src/components/secondary/ListCard/_listCard.scss
@@ -32,9 +32,11 @@
 
 .list-card-tags {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 0.8rem;
+  padding: 0.5rem 0;
   .card-tag {
-    margin: 0.5rem 0.5rem 1em 0;
+    margin: 0 0.4rem 0.4rem 0;
     cursor: pointer;
     padding: 0.2rem 0.5rem;
     border-radius: 3px;
